force-app/main/default/objects/Location_Steer_Metadata__mdt/Location_Steer_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Location Steer</label>
    <pluralLabel>Location Steers</pluralLabel>
</CustomObject>