force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Differential_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Differential_Value_1__c</fullName>
    <label>Differential Value 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>