force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Differential_Value_2__c.field-meta.xml
<CustomField>
    <fullName>Differential_Value_2__c</fullName>
    <label>Differential Value 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>