force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Factor_Route_1__c.field-meta.xml
<CustomField>
    <fullName>Factor_Route_1__c</fullName>
    <label>Factor Route 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>