force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/NoWeightage__c.field-meta.xml
<CustomField>
    <fullName>NoWeightage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked only if the source steer calculation to be done on origination steer &amp; Manual adjustment, also not considering the weightages if any</description>
    <label>NoWeightage</label>
    <type>Checkbox</type>
</CustomField>