force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Origination_Steer_Type__c.field-meta.xml
<CustomField>
    <fullName>Origination_Steer_Type__c</fullName>
    <label>Origination Steer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Harburg IGO steer</fullName>
            </value>
            <value>
                <fullName>Harburg AGO steer</fullName>
            </value>
            <value>
                <fullName>ARA AGO Steer</fullName>
            </value>
            <value>
                <fullName>ARA IGO Steer</fullName>
            </value>
            <value>
                <fullName>ARA MOGAS Steer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>