force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <label>Plant Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>D003</fullName>
            </value>
            <value>
                <fullName>D004</fullName>
            </value>
            <value>
                <fullName>D023</fullName>
            </value>
            <value>
                <fullName>D024</fullName>
                <default>true</default>
                <label>D024</label>
            </value>
            <value>
                <fullName>D025</fullName>
            </value>
            <value>
                <fullName>D028</fullName>
            </value>
            <value>
                <fullName>D029</fullName>
            </value>
            <value>
                <fullName>D127</fullName>
            </value>
            <value>
                <fullName>D322</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>