force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Product_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group__c</fullName>
    <label>Product Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGO</fullName>
                <default>true</default>
                <label>AGO</label>
            </value>
            <value>
                <fullName>IGO</fullName>
            </value>
            <value>
                <fullName>MOGAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>