force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Quote_Name1__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name1__c</fullName>
    <description>Used to hold Reuter Quotes/Freight rates to be considered for calculation</description>
    <label>Quote Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>