force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Route_1__c.field-meta.xml
<CustomField>
    <fullName>Route_1__c</fullName>
    <label>Route 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>