force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Route_2__c.field-meta.xml
<CustomField>
    <fullName>Route_2__c</fullName>
    <label>Route 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>