force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import</fullName>
                <default>true</default>
                <label>Import</label>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Balanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>