force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Select_CO_Steer__c.field-meta.xml
<CustomField>
    <fullName>Select_CO_Steer__c</fullName>
    <label>Select CO Steer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AGO-Ludwigshafen</fullName>
            </value>
            <value>
                <fullName>AGO-Ludwigshafen-Balanced</fullName>
                <isActive>false</isActive>
                <label>AGO-Ludwigshafen-Balanced</label>
            </value>
            <value>
                <fullName>IGO-Ludwigshafen</fullName>
            </value>
            <value>
                <fullName>IGO-Ludwigshafen-Balanced</fullName>
                <isActive>false</isActive>
                <label>IGO-Ludwigshafen-Balanced</label>
            </value>
            <value>
                <fullName>MOGAS-Godorf</fullName>
            </value>
            <value>
                <fullName>MOGAS-Godorf-Balanced</fullName>
                <isActive>false</isActive>
                <label>MOGAS-Godorf-Balanced</label>
            </value>
            <value>
                <fullName>MOGAS-Karlsruhe</fullName>
            </value>
            <value>
                <fullName>MOGAS-Karlsruhe-Balanced</fullName>
                <isActive>false</isActive>
                <label>MOGAS-Karlsruhe-Balanced</label>
            </value>
            <value>
                <fullName>MOGAS-Karlsruhe-Export</fullName>
                <isActive>false</isActive>
                <label>MOGAS-Karlsruhe-Export</label>
            </value>
            <value>
                <fullName>MOGAS-Karlsruhe-Import</fullName>
                <isActive>false</isActive>
                <label>MOGAS-Karlsruhe-Import</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>