force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ARA</fullName>
            </value>
            <value>
                <fullName>Flörsheim</fullName>
            </value>
            <value>
                <fullName>Godorf</fullName>
            </value>
            <value>
                <fullName>Harburg</fullName>
            </value>
            <value>
                <fullName>Karlsruhe</fullName>
            </value>
            <value>
                <fullName>Ludwigshafen</fullName>
            </value>
            <value>
                <fullName>Schwedt-PCK</fullName>
            </value>
            <value>
                <fullName>Wesseling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>