force-app/main/default/objects/Location_Steer_Metadata__mdt/fields/Weighting_of_Quote1__c.field-meta.xml
<CustomField>
    <fullName>Weighting_of_Quote1__c</fullName>
    <description>Used to provide the % value to be considered from Reuters/Freights for calculating the scenario value</description>
    <label>Weightage Of Quote1</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>