force-app/main/default/objects/Location_Steer_Metadata__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Product_Sub_Group__c</columns>
    <columns>Source__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Scenario__c</columns>
    <columns>Select_CO_Steer__c</columns>
    <columns>Origination_Steer_Type__c</columns>
    <columns>Differential_Value_1__c</columns>
    <columns>Differential_Value_2__c</columns>
    <columns>Factor_Route_1__c</columns>
    <columns>Route_1__c</columns>
    <columns>Factor_Route_2__c</columns>
    <columns>Route_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>